--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
   repositories {
     jcenter()
     maven { url = "http://files.minecraftforge.net/maven" }
-    maven { url "https://plugins.gradle.org/m2/" }
+    maven { url = "https://plugins.gradle.org/m2/" }
   }
   dependencies {
     classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
@@ -13,7 +13,6 @@ buildscript {
 
 repositories {
   mavenCentral()
-
   maven { url 'https://oss.sonatype.org/content/groups/public/' }
 }
 
