--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 repositories {
   mavenCentral()
-  maven { url 'https://oss.sonatype.org/content/groups/public/' }
+  maven { url = 'https://oss.sonatype.org/content/groups/public/' }
 }
 
 apply plugin: 'java'
