--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,9 @@ jar {
         "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
     ])
   }
+
+  from sourceSets.common.output
+  from sourceSets.core.output
 }
 
 processResources {
