--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL="http://my.issue.tracker/" #optional
+issueTrackerURL="https://github.com/fr1kin/ForgeHax/issues" #optional
 license='MIT'
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
@@ -23,7 +23,7 @@ displayName="ForgeHax" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="fiki.dev" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-#logoFile="examplemod.png" #optional
+logoFile="logo.png" #optional
 # A text field displayed in the mod UI
 credits="Rain#4705 for the logo" #optional
 # A text field displayed in the mod UI
