mods.toml now updated with gradle build script

--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,4 @@
 buildscript {
-  ext {
-    forgehaxCommit = { ->
-      def out = new ByteArrayOutputStream()
-      exec {
-        commandLine 'git', 'rev-parse', '--short', 'HEAD'
-        standardOutput out
-      }
-      return out.toString().trim()
-    }.call()
-
-    forgehaxVersion = "3.2.0-${forgehaxCommit}"
-
-    minecraftVersion = '1.16.4'
-    forgeVersion = '35.0.7'
-
-    fmlVersion = '2.0.0-milestone.1'
-    lombokVersion = '1.18.16'
-
-    mcpVersion = '1.16.3'
-    mcpChannel = 'snapshot'
-    mcpMapping = '20201028'
-  }
   repositories {
     mavenCentral()
     maven { url "http://files.minecraftforge.net/maven" }
@@ -28,6 +6,34 @@ buildscript {
   dependencies {
     classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
   }
+}
+
+ext {
+  forgehaxCommit = { ->
+    try {
+      def out = new ByteArrayOutputStream()
+      exec {
+        commandLine 'git', 'rev-parse', '--short', 'HEAD'
+        standardOutput out
+      }
+      return out.toString().trim()
+    } catch (Throwable t) {
+      logger.warn('Unable to obtain the latest git commit hash. Probably did not clone project using git clone')
+      return 'latest'
+    }
+  }.call()
+
+  forgehaxVersion = "3.2.0-${forgehaxCommit}"
+
+  minecraftVersion = '1.16.4'
+  forgeVersion = '35.0.7'
+
+  fmlVersion = '2.0.0-milestone.1'
+  lombokVersion = '1.18.16'
+
+  mcpVersion = '1.16.3'
+  mcpChannel = 'snapshot'
+  mcpMapping = '20201028'
 }
 
 repositories {
@@ -125,6 +131,7 @@ jar {
 
 processResources {
   from 'logo.png'
+
   filesMatching('**/config.properties') {
     //noinspection UnnecessaryQualifiedReference
     it.filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [
@@ -134,6 +141,43 @@ processResources {
         "forgehax.mcp.version"  : mcpVersion.toString(),
         "forgehax.mcp.channel"  : mcpChannel.toString(),
         "forgehax.mcp.mapping"  : mcpMapping.toString()
+    ]
+  }
+
+  filesMatching('**/mods.toml') {
+    final getMajorVersion = { version ->
+      final pattern = /^(?<major>[0-9]+)\.(?<minor>[0-9]+)\.(?<patch>[0-9]+)$/
+      final res = forgeVersion =~ pattern
+      if (res.find()) {
+        return "[${res.group('major')},)" as String
+      } else {
+        throw new Error("'$version' is not valid semantic versioning!")
+      }
+    }
+
+    final getContributors = { api ->
+      try {
+        final url = new URL(api)
+        final json = new groovy.json.JsonSlurper().parseText(url.text)
+        return String.join(', ', json.collect { it.login })
+      } catch (Throwable t) {
+        logger.warn("Failed to get contributors from GitHub API! Defaulting to hardcoded users...")
+        logger.debug(t.getMessage(), t)
+        return 'fr1kin, BabbaJ, 0x22'
+      }
+    }
+
+    //noinspection UnnecessaryQualifiedReference
+    it.filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [
+        'forgehax.version'      : project.version as String,
+        'forgehax.forge.version': getMajorVersion.call(forgeVersion),
+        'forgehax.issue.tracker': 'https://github.com/fr1kin/ForgeHax/issues',
+        'forgehax.update.url'   : 'TODO',
+        'forgehax.url'          : 'fiki.dev',
+        'forgehax.logo.file'    : 'logo.png',
+        'forgehax.credits'      : 'Rain#4705 for the logo',
+        'forgehax.authors'      : getContributors.call('https://api.github.com/repos/fr1kin/ForgeHax/contributors'),
+        'forgehax.description'  : 'Hax 4 Forge'
     ]
   }
 }
@@ -152,7 +196,7 @@ task setGameDir() {
 }
 
 task copyJar(type: DefaultTask, dependsOn: [setGameDir]) {
-  if(file(project.ext.gameDir).exists()) {
+  if (file(project.ext.gameDir).exists()) {
     final files = { directory, filter, closure ->
       new File(directory).eachFileMatch(filter, closure)
     }
