--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,53 +1,16 @@
-# This is an example mods.toml file. It contains the data relating to the loading mods.
-# There are several mandatory fields (#mandatory), and many more that are optional (#optional).
-# The overall format is standard TOML format, v0.5.0.
-# Note that there are a couple of TOML lists in this file.
-# Find more information on toml format here:  https://github.com/toml-lang/toml
-# The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
-modLoader="javafml" #mandatory
-# A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-# A URL to refer people to when problems occur with this mod
-issueTrackerURL="https://github.com/fr1kin/ForgeHax/issues" #optional
+modLoader="javafml"
+loaderVersion="@forgehax.forge.version@"
+issueTrackerURL="@forgehax.issue.tracker@"
 license='MIT'
-# A list of mods - how many allowed here is determined by the individual mod loader
-[[mods]] #mandatory
-# The modid of the mod
-modId="forgehax" #mandatory
-# The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="${file.jarVersion}" #mandatory
- # A display name for the mod
-displayName="ForgeHax" #mandatory
-# A URL to query for updates for this mod. See the JSON update specification <here>
-#updateJSONURL="https://github.com/fr1kin/ForgeHax" #optional
-# A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="fiki.dev" #optional
-# A file name (in the root of the mod JAR) containing a logo for display
-logoFile="logo.png" #optional
-# A text field displayed in the mod UI
-credits="Rain#4705 for the logo" #optional
-# A text field displayed in the mod UI
-authors="fr1kin, Babbaj, 0x22, & more" #optional
-# The description text for the mod (multi line!) (#mandatory)
+[[mods]]
+modId="forgehax"
+version="@forgehax.version@"
+displayName="ForgeHax"
+#updateJSONURL="@forgehax.update.url@"
+displayURL="@forgehax.url@"
+logoFile="@forgehax.logo.file@"
+credits="@forgehax.credits@"
+authors="@forgehax.authors@"
 description='''
-Hax 4 Forge
+@forgehax.description@
 '''
-# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-#[[dependencies.examplemod]] #optional
-#    # the modid of the dependency
-#    modId="forge" #mandatory
-#    # Does this dependency have to exist - if not, ordering below must be specified
-#    mandatory=true #mandatory
-#    # The version range of the dependency
-#    versionRange="[31,)" #mandatory
-#    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
-#    ordering="NONE"
-#    # Side this dependency is applied on - BOTH, CLIENT or SERVER
-#    side="BOTH"
-## Here's another dependency
-#[[dependencies.examplemod]]
-#    modId="minecraft"
-#    mandatory=true
-#    versionRange="[1.15.2]"
-#    ordering="NONE"
-#    side="BOTH"
