--- a/buildSrc/JavacPlugin/build.gradle
+++ b/buildSrc/JavacPlugin/build.gradle
@@ -5,7 +5,15 @@ plugins {
 group 'dev.fiki.forgehax.javac'
 
 sourceSets {
-  templates {}
+  templates {
+    compileClasspath += main.compileClasspath
+
+    // don't compile any java files
+    // there is probably a better way to do this... probably
+    java {
+      exclude '*'
+    }
+  }
 }
 
 ext {
@@ -29,8 +37,9 @@ dependencies {
   compile project(':Annotations')
   compile files(unpackedLombok)
 
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+//  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
+  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
   testCompile group: 'commons-io', name: 'commons-io', version: '2.8.0'
   testCompile group: 'com.google.testing.compile', name: 'compile-testing', version: '0.19'
   testCompile group: 'org.ow2.asm', name: 'asm-debug-all', version: '5.2'
@@ -54,6 +63,8 @@ task unpackLombok {
 test {
   dependsOn unpackLombok
 
+  environment 'BUILD_DIR', project.buildDir
+  environment 'TEMPLATES_DIR', sourceSets.templates.java.srcDirs[0].getAbsolutePath()
   environment 'REMAPPER_FILE', file('src/test/resources/mappings').getAbsolutePath()
   useJUnitPlatform()
 }
