--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ minecraft {
 }
 
 dependencies {
+//  compile group: "info.journeymap", name: "journeymap-api", version: '1.12-1.4'
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
 }
