--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ 1.16 ]
+    branches: [ '1.16' ]
   pull_request:
-    branches: [ 1.16 ]
+    branches: [ '1.16' ]
 
 jobs:
   build:
